Prevent title image overlapping header

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -32,8 +32,8 @@ body {
 .header-nav {
   align-items: center;
   line-height: 1.15;
-  padding-top: 8px;
-  padding-bottom: 0;
+  padding-top: 6px;
+  padding-bottom: 4px;
 }
 
 #menu a {
@@ -147,7 +147,7 @@ body {
 .home-title-picture {
   width: 100vw;
   height: 50vh;
-  margin: -64px calc(50% - 50vw) 48px;
+  margin: 0 calc(50% - 50vw) 48px;
   background-image: url("/images/title-picture.jpg");
   background-position: center center;
   background-size: cover;
